# gh-tasks

./: pyproject.toml
.github/workflows/: process-tasks.yml
scripts/: process_task.py
