# gh_tasks/pyproject.toml
[project]
name = "gh-tasks"
version = "0.1.0"
description = "Task management system using GitHub as a backend"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "gh-store>=0.6.2",
    "loguru>=0.7.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.9",
    "black>=23.12.0",
    "isort>=5.13.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=gh_tasks --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501"]
line-length = 88
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
